[package]
name = "ytnef_sys"
version = "0.3.1"
authors = ["Alec Hussey <alec.hussey@madsoft.org>"]
license = "GPL-2.0-or-later"
description = "An FFI interface to libytnef. A C library used for parsing the TNEF file format."
keywords = ["ytnef","binding"]
categories = ["external-ffi-bindings"]
homepage = "https://github.com/alechussey/ytnef-sys"
documentation = "https://docs.rs/crate/ytnef-sys"
repository = "https://github.com/alechussey/ytnef-sys.git"
readme = "README.md"
edition = "2021"
build = "build.rs"

[build-dependencies]
cc = "1.0"
